# fh-heroicons

./: .gitignore  LICENSE  README.md  pyproject.toml
src/fh_heroicons/: __init__.py  core.py  test_core.py
