[project]
name = "fh-heroicons"
version = "0.1.0"
description = "FastHTML package for Heroicons"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Marius", email = "mariusvach@gmail.com" }
]
requires-python = ">=3.10"
keywords = ["fasthtml", "heroicons", "icons", "svg"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "httpx>=0.27.2",
    "lxml>=5.3.0",
    "python-fasthtml>=0.10.1",
]

[project.urls]
Homepage = "https://github.com/vacmar01/fh-heroicons"
Repository = "https://github.com/vacmar01/fh-heroicons"
Issues = "https://github.com/vacmar01/fh-heroicons/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
